# timetrack

./: LICENSE  alembic.ini  env.d.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/: .env  docker-compose.yml  exceptions.py  main.py  settings.py
api/auth/: service.py  view.py
api/chip/: service.py  view.py
api/database/: __init__.py  session.py
api/database/migrations/: env.py
api/database/migrations/versions/: 1a4047747b4d_added_attribute_nullable_to_end_.py  336e88331013_added_user_and_log_table.py  36ad83cd0534_added_chip_table_and_added_foreignkey_.py  38e46ccdd47f_removed_action_column_in_log_table.py  3bffeec18d54_removed_timestamp_column_and_added_.py  (+5 more)
api/database/schema/: chip.py  log.py  user.py
api/log/: model.py  service.py  view.py
api/user/: service.py  view.py
hardware/: Icons.py  buzzer.py  data_read.py  main.py  mfrc522.py  urequests.py
src/: App.vue  main.ts
src/assets/: main.css
src/client/: index.ts
src/client/models/: Body_login_for_access_token_auth_token_post.ts  PostTrackResponse.ts  TokenResponse.ts
src/client/services/: DefaultService.ts
src/components/: ButtonComponent.vue  InputComponent.vue
src/components/icons/: IcRoundLogout.vue  MaterialSymbolsContactSupport.vue  MaterialSymbolsLightMode.vue  MaterialSymbolsModeNight.vue  PhPasswordFill.vue
src/router/: index.ts
src/stores/: authStore.ts  timeStore.ts
src/stores/old/: authStore.ts
src/views/: DashboardView.vue  LoginView.vue  RegisterView.vue
src/views/old/: DashboardView.vue  LoginView.vue  RegisterView.vue
